fixed the navbar alignment

--- a/index.css
+++ b/index.css
@@ -601,3 +601,7 @@ main {
         padding-right: 2px;
     }
 }
+.header-list {
+  margin-right: 35px;
+  margin-top: 30px;
+}
